# breakout

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Application.h  BaseComponent.h  FileReader.h  Game.h  GameObject.h  Level.h  Renderer.h  ResourceManager.h  Shader.h  ShaderManager.h  Sprite.h  SpriteComponent.h  Texture2D.h  TextureManager.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  FileReader.cpp  Game.cpp  GameObject.cpp  Level.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  ShaderManager.cpp  Sprite.cpp  SpriteComponent.cpp  Texture2D.cpp  TextureManager.cpp
